--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,265 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    android:padding="16dp"
+    android:background="#F5F5F5"
+    android:gravity="center">
 
-    <TextView
-        android:id="@+id/textView"
+        <!-- Income Input -->
+        <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Income"
-        android:layout_marginTop="35dp"
-        android:layout_marginStart="30dp"
-        android:textStyle="bold"/>
+        android:text="Enter your Income:"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:layout_marginBottom="8dp"/>
 
     <EditText
-        android:id="@+id/edtIncome"
-        android:layout_width="348dp"
+        android:id="@+id/incomeInput"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:ems="10"
-        android:hint="Enter the income"
-        android:inputType="number"
-        android:minHeight="48dp" />
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/edit_text_border"
+        android:hint="Enter your income"
+        android:inputType="numberDecimal"
+        android:minHeight="48dp"
+        android:padding="12dp"
+        android:textSize="16sp" />
 
-    <TextView
-        android:id="@+id/textView2"
+        <!-- Expense Input Fields -->
+        <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Expenses"
-        android:layout_marginTop="35dp"
-        android:layout_marginStart="30dp"
-        android:textStyle="bold"/>
+        android:text="Enter your Expenses:"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:layout_marginBottom="8dp"/>
 
-    <LinearLayout
+        <!-- Expense categories -->
+    <EditText
+        android:id="@+id/expenseFood"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="10dp">
-        <LinearLayout
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:orientation="vertical">
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/edit_text_border"
+        android:hint="Food"
+        android:inputType="numberDecimal"
+        android:minHeight="48dp"
+        android:padding="12dp"
+        android:textSize="16sp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Expense Name" />
-
-            <EditText
-                android:id="@+id/expenseName1"
-                android:layout_width="180dp"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Enter the expense Name"
-                android:inputType="number"
-                android:minHeight="48dp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Expense Amount"/>
-
-            <EditText
-                android:id="@+id/amount1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Enter the expense Name"
-                android:int="Enter the expense amount"
-                android:inputType="number"
-                android:minHeight="48dp" />
-        </LinearLayout>
-    </LinearLayout>
-    <LinearLayout
+    <EditText
+        android:id="@+id/expenseEntertainment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="15dp">
-        <LinearLayout
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:orientation="vertical">
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/edit_text_border"
+        android:hint="Entertainment"
+        android:inputType="numberDecimal"
+        android:minHeight="48dp"
+        android:padding="12dp"
+        android:textSize="16sp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Expense Name" />
-
-            <EditText
-                android:id="@+id/expenseName2"
-                android:layout_width="180dp"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Enter the expense Name"
-                android:inputType="number"
-                android:minHeight="48dp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Expense Amount"/>
-
-            <EditText
-                android:id="@+id/amount2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Enter the expense amount"
-                android:inputType="number"
-                android:minHeight="48dp" />
-        </LinearLayout>
-    </LinearLayout>
-    <LinearLayout
+    <EditText
+        android:id="@+id/expenseUtility"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="15dp">
-        <LinearLayout
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:orientation="vertical">
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/edit_text_border"
+        android:hint="Utility"
+        android:inputType="numberDecimal"
+        android:minHeight="48dp"
+        android:padding="12dp"
+        android:textSize="16sp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Expense Name" />
-
-            <EditText
-                android:id="@+id/expenseName3"
-                android:layout_width="180dp"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Enter the expense Name"
-                android:inputType="number"
-                android:minHeight="48dp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Expense Amount"/>
-
-            <EditText
-                android:id="@+id/amount3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Enter the expense amount"
-                android:inputType="number"
-                android:minHeight="48dp" />
-        </LinearLayout>
-    </LinearLayout>
-    <LinearLayout
+    <EditText
+        android:id="@+id/expenseMiscellaneous"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="15dp">
-        <LinearLayout
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:orientation="vertical">
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/edit_text_border"
+        android:hint="Miscellaneous"
+        android:inputType="numberDecimal"
+        android:minHeight="48dp"
+        android:padding="12dp"
+        android:textSize="16sp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Expense Name" />
-
-            <EditText
-                android:id="@+id/expenseName4"
-                android:layout_width="180dp"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Enter the expense Name"
-                android:inputType="number"
-                android:minHeight="48dp"
-                tools:ignore="LabelFor" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Expense Amount"/>
-
-            <EditText
-                android:id="@+id/amount4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Enter the expense amount"
-                android:inputType="number"
-                android:minHeight="48dp" />
-        </LinearLayout>
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/btnCalculate"
-        android:layout_width="wrap_content"
+        <!-- Calculate Button -->
+        <Button
+        android:id="@+id/calculateButton"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Calculate Balance"
-        android:layout_gravity="center"
-        android:layout_marginTop="15dp"/>
+        android:textSize="18sp"
+        android:layout_marginBottom="24dp"
+        android:backgroundTint="#4CAF50"
+        android:textColor="#FFFFFF"
+        android:padding="14dp"
+        android:layout_gravity="center"/>
 
-    <TextView
-        android:id="@+id/txtTotalIncome"
-        android:layout_width="match_parent"
+        <!-- Results -->
+        <TextView
+        android:id="@+id/totalIncomeText"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="15dp"
-        android:text="Total Income:"
-        android:textSize="15sp" />
+        android:text="Total Income: $0"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_marginBottom="8dp"/>
 
-    <TextView
-        android:id="@+id/txtTotalExpense"
-        android:layout_width="match_parent"
+        <TextView
+        android:id="@+id/totalExpensesText"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginStart="15dp"
-        android:text="Total Expense:"
-        android:textSize="15sp" />
+        android:text="Total Expenses: $0"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_marginBottom="8dp"/>
 
-    <TextView
-        android:id="@+id/txtBalance"
-        android:layout_width="match_parent"
+        <TextView
+        android:id="@+id/balanceText"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginStart="15dp"
-        android:text="Total Income:"
-        android:textSize="15sp" />
+        android:text="Balance: $0"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        android:layout_marginBottom="8dp"/>
 
-    <TextView
-        android:id="@+id/txtOutput"
-        android:layout_width="match_parent"
+        <!-- Feedback Message -->
+        <TextView
+        android:id="@+id/expenseMessage"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginStart="15dp"
-        android:text="Status:"
-        android:textSize="15sp" />
+        android:textSize="18sp"
+        android:textColor="#000000"/>
+
 </LinearLayout>
